# lettre

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: general.yml
configuration/: base.yml
examples/: brevo_send_http.rs  subscriber.rs  subscriber_name_parse_error.rs
migrations/: 20231122210904_make_status_not_null_in_subscriptions.sql  20231207080338_seed_user.sql
scripts/: init_db.sh
src/: authenticate.rs  configuration.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: mod.rs  subscriber.rs  subscriber_email.rs  subsriber_name.rs
src/domain/person/: email.rs  mod.rs  name.rs
src/email/: mod.rs
src/email/brevo/: email.rs  mod.rs  secret.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
